--- a/assets/memgame/style.css
+++ b/assets/memgame/style.css
@@ -6,6 +6,18 @@ body {
     margin-top: 50px;
     background-color: #000000;
     width: 80%;
+    position: relative;
+}
+
+#mute {
+    width: 200px;
+    height: 60px;
+    background-color: #000000;
+    color: red;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 26px;
 }
 
 .center {
@@ -13,6 +25,10 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+}
+
+.mutewidth {
+  width: 260px;
 }
 
 .center-van {
